exercises/module12/service1-deploy-spec.yaml
#Deployment方式部署
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-service1
spec:
  #replicas: 3
  selector:
    matchLabels:
      app: http-service1
  template:
    metadata:
      labels:
        app: http-service1
    spec:
      containers:
        - name: http-service1
          image: docker.io/zkyy66/service1:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-server-service1
spec:
  ports:
    - name: http-service1
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: http-service1
