exercises/module12/istio-spec.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: http-service1
spec:
  gateways:
    - httpserver-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            exact: /service0
      route:
        - destination:
            host: service0
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cncamp-credential
